--- a/.github/workflows/website-build.yaml
+++ b/.github/workflows/website-build.yaml
@@ -18,11 +18,8 @@ jobs:
           ref: main
           path: main-branch
 
-      - name: Checkout gh-pages branch
-        uses: actions/checkout@v3
-        with:
-          ref: gh-pages
-          path: gh-pages-branch
+      - name: Setup Pages
+        uses: actions/configure-pages@v2
 
       - name: Setup ruby
         uses: ruby/setup-ruby@v1
