--- a/.github/workflows/website-build.yaml
+++ b/.github/workflows/website-build.yaml
@@ -3,29 +3,37 @@ on:
   push:
     branches:
       - main
-      - ps/create_website_scaffolding
 jobs:
   WebsiteBuild:
     runs-on: ubuntu-latest
 
     env:
-      BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
-      BUNDLE_GEMFILE: ${{ github.head_ref || github.ref_name }}/website/Gemfile
+      BUNDLE_GEMFILE: ${{ github.workspace }}/main-branch/website/Gemfile
 
     steps:
       - name: Checkout main branch
         uses: actions/checkout@v3
         with:
-          ref: ${{ env.BRANCH_NAME }}
+          ref: main
+          path: main-branch
 
-      - name: Setup Pages
-        uses: actions/configure-pages@v2
+      - name: Checkout gh-pages branch
+        uses: actions/checkout@v3
+        with:
+          ref: gh-pages
+          path: gh-pages-branch
+
+      - name: Setup ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: '3.0'
+          bundler-cache: true
 
       - name: Replace placeholder files with original files
         run: |
           # set source and website directories
-          export WEBSITE_DIR="website/_includes/spec_copies"
-          export SOURCE_DIR="specifications"
+          export WEBSITE_DIR="${{ github.workspace }}/main-branch/website/_includes/spec_copies"
+          export SOURCE_DIR="${{ github.workspace }}/main-branch/specifications"
 
           # remove any existing placeholder files
           find \
@@ -47,24 +55,23 @@ jobs:
 
           # update specifications source base url with current repo and branch
           echo "github_specs_base_url: \"https://github.com/${{ github.repository }}/blob/${{ github.ref_name }}/specifications\"" \
-            >> website/_config.yml
+            >> ${{ github.workspace }}/main-branch/website/_config.yml
 
           # default base url is root of domain
           echo "baseurl: /" \
-            >> website/_config.yml
+            >> ${{ github.workspace }}/main-branch/website/_config.yml
 
       - name: Non-production builds use Github Page's default base url (/Power-Systems-Data/)
         if: ${{ github.repository != 'carbon-data-specification/Power-Systems-Data' }}
         run: |
           sed -i \
             's|baseurl: \/|baseurl: /Power-Systems-Data/|g' \
-            website/_config.yml
+            ${{ github.workspace }}/main-branch/website/_config.yml
 
-      - name: Build with Jekyll
-        uses: actions/jekyll-build-pages@v1
-        with:
-          source: ./website
-          destination: ./website/site
+      - name: Build static website
+        run: |
+          cd ${{ github.workspace }}/main-branch/website
+          bundle exec jekyll build -d ${{ github.workspace }}/gh-pages-branch
 
       - name: Set production domain
         if: ${{ github.repository == 'carbon-data-specification/Power-Systems-Data' }}
